# homeomorphism

./: .gitignore  BASELINE_REFACTORING_COMPLETE.md  CHANGELOG_BASELINE_REVISION.md  DELIVERABLES_CHECKLIST.md  DESIGN_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_BASELINE_REFACTORING.md  SYNTHETIC_EXPERIMENTS.md  baselines_readme.md  executed_intervention_purity_checks.ipynb  main.py  pyproject.toml  run_comprehensive_experiments.py  test_baseline_analysis.py  test_residual.py  test_script.py  update_residual_nb.py
examples/: extract_activations.py
experiments/: README_exp2.md  SMALL_MODELS.md  baseline_configs.py  baseline_exp_2_maximum_entropy.py  baseline_exp_3_permutation.py  baseline_exp_4_uniform.py  baseline_runner.py  exp1_per_token_J.py  exp2_dev_notes.md  exp2_intrinsic_dim.py  exp3_llama_hyperplane.py  exp3_section2_baselines.py  exp3_synthetic_manifolds.py  exp4_id_estimation.py  plot_baseline_id.py  run_baseline_configs_gpu.py  run_synthetic_experiments.py  run_tiny_model_baselines.py  visualize_synthetic_results.py
experiments/old/: README.md  baseline_exp_1_topological.py  exp3_llama_hyperplane.py
notebooks/: baseline_analysis.ipynb  exp4_id_plots.ipynb  gpt1_embedding.ipynb  production_memory_safe_exploratory.ipynb  production_memory_safe_statistical.ipynb  testing.ipynb
notebooks/baseline_notebook/: causal_mask_jacobian_structure.ipynb  deep_linear_condition_number.ipynb  intervention_purity_checks.ipynb  interventions.ipynb  known_manifold_id.ipynb  neighborhood_overlap_identity_projection.ipynb  repeated_token_positions.ipynb  residual_relu_analytic_jacobian.ipynb
src/activation_extractor/: __init__.py  extractor.py
src/homeomorphism/: __init__.py  data.py  hooks.py  id_est.py  interventions.py  jacobian.py  latents.py  models.py  paths.py  toy_transformer.py
src/homeomorphism/baselines/: __init__.py  analysis.py  capture.py  config.py  statistical_tests.py  template_analyzers.py  visualization.py
tests/: baseline_test_experiments.py  conftest.py  test_baselines_integration.py  test_data.py  test_hooks.py  test_integration.py  test_interventions.py  test_jacobian.py  test_models.py  test_topological_transformer.py
