[project]
name = "homeomorphism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "torch>=2.8.0",
    "transformers>=5.5.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# Add project root so tests can import the `experiments` package alongside
# the installed `homeomorphism` package (which lives under src/).
pythonpath = ["."]
testpaths = ["tests"]
