[project]
name = "homeomorphism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.11",
    "pandas>=2.0",
    "scikit-dimension>=0.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nnsight>=0.6.3",
    "torch>=2.8.0",
    "transformers>=5.5.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
topology = [
    "ripser>=0.6.12",
    "scikit-tda>=1.1.1",
]

[tool.pytest.ini_options]
# Add project root so tests can import the `experiments` package alongside
# the installed `homeomorphism` package (which lives under src/).
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "baseline_test_*.py"]
markers = [
    "slow: marks computationally expensive tests (deselected by default)",
]
